dashboard displays all pub stats, specified parser for bsoup

--- a/scrape-author-positions.ipynb
+++ b/scrape-author-positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import OrderedDict\n",
     "\n",
-    "from selenium import webdriver\n",
+    "from selenium.webdriver import Chrome\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.common.exceptions import TimeoutException\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome()"
+    "driver = Chrome()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
