added table w/ new data, new chart

--- a/notebooks/scrape-author-positions.ipynb
+++ b/notebooks/scrape-author-positions.ipynb
@@ -942,7 +942,7 @@
     "percents_df = df.copy()\n",
     "percents_df.citations = (100 * df.citations / df.citations.sum()).round(0)\n",
     "percents_df.citations = percents_df.citations / 100\n",
-    "percents_df = percents_df.fillna(0)\n",
+    "# percents_df = percents_df.fillna(0)\n",
     "percents_df"
    ]
   },
