--- a/notebooks/scrape-author-positions.ipynb
+++ b/notebooks/scrape-author-positions.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "'Geoffrey Hinton'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['66294'], ['62557'], ['45574']]\n",
+      "[['66361'], ['62717'], ['45576']]\n",
       "712\n"
      ]
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "712"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +211,35 @@
    "source": [
     "citations_lis = [int(c[0]) if len(c)==1 else 0 for c in citations_lis]\n",
     "len(citations_lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "464906"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(citations_lis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Weird that this different from Google's listed total citations for Geoffrey Hinton: 372718.\n",
+    "\n",
+    "Seems they might be taking into account duplicate publications when counting total citations, but not when calculating the author's overall h-index, as you'll see later in the notebook."
    ]
   },
   {
@@ -222,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[', 1986', ', 2012', ', 1986', ', 1985', ', 2015']"
+       "[', 1986', ', 2012', ', 1986', ', 2015', ', 1985']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +287,7 @@
        "595"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +370,7 @@
        " ['DE Rumelhart', 'GE Hinton', 'RJ Williams']]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2nd', '3rd', '2nd', '2nd', '3rd']\n",
+      "['2nd', '3rd', '2nd', '3rd', '2nd']\n",
       "712\n"
      ]
     }
@@ -402,6 +431,8 @@
     "\n",
     "                if i == len(names)-1 and i > 2:\n",
     "                    author_positions_lis.append('last')\n",
+    "                elif i > 4:\n",
+    "                    author_positions_lis.append('after 5th')\n",
     "                else:\n",
     "                    author_positions_lis.append(ordinal(i+1))\n",
     "                break\n",
@@ -415,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'1st', '2nd', '3rd', '4th', '5th', '6th', '7th', 'last'}"
+       "{'1st', '2nd', '3rd', '4th', '5th', 'after 5th', 'last'}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +482,7 @@
        "dict_keys(['1st', '2nd', '3rd', '4th', '5th', '6th', '7th', 'last'])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -502,27 +533,27 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1st</td>\n",
-       "      <td>12979</td>\n",
+       "      <td>12994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1st</td>\n",
-       "      <td>12185</td>\n",
+       "      <td>12196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>1st</td>\n",
-       "      <td>7812</td>\n",
+       "      <td>7833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>1st</td>\n",
-       "      <td>4966</td>\n",
+       "      <td>4969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>1st</td>\n",
-       "      <td>4431</td>\n",
+       "      <td>4433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -530,14 +561,14 @@
       ],
       "text/plain": [
        "   positions  citations\n",
-       "8        1st      12979\n",
-       "9        1st      12185\n",
-       "11       1st       7812\n",
-       "14       1st       4966\n",
-       "15       1st       4431"
+       "8        1st      12994\n",
+       "9        1st      12196\n",
+       "11       1st       7833\n",
+       "14       1st       4969\n",
+       "15       1st       4433"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +602,7 @@
     "        if df.shape[0] <= 0:\n",
     "            hindexes_dict[k] = 0\n",
     "        else:\n",
-    "            hindexes_dict[k] = df.shape[0] - 1\n",
+    "            hindexes_dict[k] = df.shape[0]\n",
     "        \n",
     "    return hindexes_dict\n",
     "        \n",
@@ -580,23 +611,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'1st': 53,\n",
-       " '2nd': 62,\n",
-       " '3rd': 28,\n",
+       "{'1st': 54,\n",
+       " '2nd': 63,\n",
+       " '3rd': 29,\n",
        " '4th': 0,\n",
-       " '5th': 1,\n",
-       " '6th': 0,\n",
+       " '5th': 2,\n",
+       " '6th': 1,\n",
        " '7th': 0,\n",
-       " 'last': 10}"
+       " 'last': 11}"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,27 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "155"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(hindexes_d.values()) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -637,14 +648,34 @@
        "159"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(hindexes_d.values()) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "159"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Regular h-index (same as Google's)\n",
-    "temp_df = citations_positions_df\n",
+    "temp_df = pd.DataFrame({\"citations\": citations_lis})\n",
     "temp_df.sort_values('citations')\n",
     "temp_df.index += 1\n",
     "temp_df = temp_df.reset_index()\n",
@@ -653,15 +684,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Not sure why the sum of the individual h-indexes is less than the regular h-index."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -695,15 +719,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1st</th>\n",
-       "      <td>53</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2nd</th>\n",
-       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3rd</th>\n",
-       "      <td>28</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4th</th>\n",
@@ -711,11 +735,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5th</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6th</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7th</th>\n",
@@ -723,7 +747,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>last</th>\n",
-       "      <td>10</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -732,17 +756,17 @@
       "text/plain": [
        "          h-index\n",
        "position         \n",
-       "1st            53\n",
-       "2nd            62\n",
-       "3rd            28\n",
+       "1st            54\n",
+       "2nd            63\n",
+       "3rd            29\n",
        "4th             0\n",
-       "5th             1\n",
-       "6th             0\n",
+       "5th             2\n",
+       "6th             1\n",
        "7th             0\n",
-       "last           10"
+       "last           11"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,15 +780,6 @@
    "metadata": {},
    "source": [
     "# Format data for plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
    ]
   },
   {
