--- a/notebooks/scrape-author-positions.ipynb
+++ b/notebooks/scrape-author-positions.ipynb
@@ -68,7 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +86,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not clickable\n"
+      "not clickable\n",
+      "['/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:9yKSN-GCB0IC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:Tyk-4Ss8FVUC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:Y0pCki6q_DkC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:2osOgNQ5qMEC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:qjMakFHDy7sC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:_FxGoFyzp5QC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:UeHWp8X0CEIC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:roLk4NBRz8UC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:d1gkVwhDpl0C', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:LkGwnXOMwfcC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:u5HHmVD_uO8C', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:3fE2CSJIrl8C', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:MXK_kJrjxJIC', '/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:kNdYIx-mwKoC']\n",
+      "14\n"
      ]
     }
    ],
@@ -96,8 +107,115 @@
     "    except TimeoutException:\n",
     "        print('not clickable')\n",
     "        break\n",
+    "        \n",
+    "html = driver.page_source\n",
+    "  \n",
+    "page = BeautifulSoup(html, \"lxml\")\n",
     "\n",
-    "html = driver.page_source"
+    "links = []\n",
+    "for td in page.find_all(\"td\", attrs={\"class\": \"gsc_a_t\"}):\n",
+    "    link = td.find(\"a\").get(\"data-href\")\n",
+    "    links.append(link)\n",
+    "print(links)\n",
+    "print(len(links))\n",
+    "\n",
+    "\n",
+    "# before = driver.window_handles\n",
+    "# windows_lis.append(before)\n",
+    "# for i, b in enumerate(pubs_buttons[1:5:]):\n",
+    "#     print(f\"link: {i+1}\")\n",
+    "    \n",
+    "#     windows_lis.append(driver.window_handles)\n",
+    "#         driver.save_screenshot(f\"button_click_{i+1}.png\")\n",
+    "#         authors_elements_lis.append(driver.find_elements_by_css_selector(\"#gsc_vcd_table > div:nth-child(1) > div.gsc_vcd_value\"))\n",
+    "\n",
+    "\n",
+    "# print(authors_elements_lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dir(links[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/citations?view_op=view_citation&hl=en&user=bcO-7KwAAAAJ&citation_for_view=bcO-7KwAAAAJ:9yKSN-GCB0IC'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links[0].get(\"data-href\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://scholar.google.com/citations?user=JicYPdAAAAAJ&hl=en&oi=ao\n"
+     ]
+    }
+   ],
+   "source": [
+    "original = \"https://scholar.google.com/citations?user=JicYPdAAAAAJ&hl=en&oi=ao\"\n",
+    "print(original)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://scholar.google.com/citations?'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original.split(\"citations?\")[0] + \"citations?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JicYPdAAAAAJ&citation_for_view=JicYPdAAAAAJ:GFxP56DSvIMC&tzom=420\n"
+     ]
+    }
+   ],
+   "source": [
+    "captured = \"https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JicYPdAAAAAJ&citation_for_view=JicYPdAAAAAJ:GFxP56DSvIMC&tzom=420\"\n",
+    "print(captured)"
    ]
   },
   {
@@ -106,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.close()"
+    "# driver.close()"
    ]
   },
   {
