tested bug fix in notebook

--- a/notebooks/scrape-author-positions.ipynb
+++ b/notebooks/scrape-author-positions.ipynb
@@ -254,7 +254,7 @@
     "        \n",
     "        authors = td1.find(\"div\").contents\n",
     "        authors = authors[0].split(\", \")\n",
-    "        authors = [name for name in authors if name!=\"...\"]\n",
+    "#         authors = [name for name in authors if name!=\"...\"]\n",
     "        \n",
     "        citations = td2.find(\"a\").contents\n",
     "        if len(citations) < 1:\n",
